--- a/Lab 3-PJN/Zadania_lab3.ipynb
+++ b/Lab 3-PJN/Zadania_lab3.ipynb
@@ -577,6 +577,9 @@
     "#  które nie mają sensu nawet nie ze w zględu na niepoprawność gramatyczną,\n",
     "#  ale ze względu na używanie wyrazów, które nie mają żadnego sensu\n",
     "#  Pytanie 2: "
+    "#  Za długie n-gramy powodują powstawanie zdań z lepszym kontekstem,\n",
+    "#  konsekwencją tego jest niestety, to że większość ciągów jest wybranych tylko ze względu na to,\n",
+    "#  że wystąpił tylko raz, gdyż szansa powtórzenia się bardzo długich n-gramów jest znikoma."
    ]
   },
   {
