--- a/Lab 3-PJN/Zadania_lab3.ipynb
+++ b/Lab 3-PJN/Zadania_lab3.ipynb
@@ -564,10 +564,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Zad 5:\n",
@@ -576,9 +574,9 @@
     "#  Krótkie n-gramy powodują powstawanie zdań, \n",
     "#  które nie mają sensu nawet nie ze w zględu na niepoprawność gramatyczną,\n",
     "#  ale ze względu na używanie wyrazów, które nie mają żadnego sensu\n",
-    "#  Pytanie 2: "
-    "#  Za długie n-gramy powodują powstawanie zdań z lepszym kontekstem,\n",
-    "#  konsekwencją tego jest niestety, to że większość ciągów jest wybranych tylko ze względu na to,\n",
+    "#  Pytanie 2: \n",
+    "#  Długie n-gramy powodują powstawanie zdań z lepszym kontekstem,\\n,\n",
+    "#  konsekwencją tego jest niestety, to że większość ciągów jest wybranych tylko ze względu na to,\\n\n",
     "#  że wystąpił tylko raz, gdyż szansa powtórzenia się bardzo długich n-gramów jest znikoma."
    ]
   },
