--- a/Lab7 - Reccursive neural network.ipynb
+++ b/Lab7 - Reccursive neural network.ipynb
@@ -43,30 +43,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.7.3 (default, Apr 24 2019, 15:29:51) [MSC v.1915 64 bit (AMD64)]\n"
+      "[1, 14, 22, 16, 43, 530, 973, 1622, 1385, 65, 458, 4468, 66, 3941, 4, 173, 36, 256, 5, 25, 100, 43, 838, 112, 50, 670, 2, 9, 35, 480, 284, 5, 150, 4, 172, 112, 167, 2, 336, 385, 39, 4, 172, 4536, 1111, 17, 546, 38, 13, 447, 4, 192, 50, 16, 6, 147, 2025, 19, 14, 22, 4, 1920, 4613, 469, 4, 22, 71, 87, 12, 16, 43, 530, 38, 76, 15, 13, 1247, 4, 22, 17, 515, 17, 12, 16, 626, 18, 2, 5, 62, 386, 12, 8, 316, 8, 106, 5, 4, 2223, 5244, 16, 480, 66, 3785, 33, 4, 130, 12, 16, 38, 619, 5, 25, 124, 51, 36, 135, 48, 25, 1415, 33, 6, 22, 12, 215, 28, 77, 52, 5, 14, 407, 16, 82, 2, 8, 4, 107, 117, 5952, 15, 256, 4, 2, 7, 3766, 5, 723, 36, 71, 43, 530, 476, 26, 400, 317, 46, 7, 4, 2, 1029, 13, 104, 88, 4, 381, 15, 297, 98, 32, 2071, 56, 26, 141, 6, 194, 7486, 18, 4, 226, 22, 21, 134, 476, 26, 480, 5, 144, 30, 5535, 18, 51, 36, 28, 224, 92, 25, 104, 4, 226, 65, 16, 38, 1334, 88, 12, 16, 283, 5, 16, 4472, 113, 103, 32, 15, 16, 5345, 19, 178, 32]\n",
+      "1\n",
+      "238.71364\n",
+      "176.49367364852034\n",
+      "Przed paddingiem. Średnia długość wektora: 238.71364; odchylenie std: 176.49367364852034\n",
+      "Po paddingu. Średnia długość wektora: 500.0; odchylenie std: 0.0\n",
+      "W zbiorze testowym jest 12500 elementów o pozytywnym sentymencie i 12500 elementów o negatywnym. Sentyment pozytywny stanowi 50.0% zbioru.\n"
      ]
     }
    ],
-   "source": [
-    "import sys\n",
-    "print(sys.version)\n",
-    "import os\n",
-    "os.environ[\"CUDA_DEVICE_ORDER\"] = \"PCI_BUS_ID\"   # see issue #152\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "from tensorflow.keras.datasets import imdb\n",
@@ -78,17 +71,17 @@
     "print(y_train[0]) # pokaż etykietę (1 = sentyment pozytywny; 0 = sentyment negatywny)\n",
     "\n",
     "average_x_len = np.mean([len(x) for x in x_train])\n",
-    "stddev_x_len = np.std(x_train)\n",
-    "print(average_x_len)0\n",
+    "stddev_x_len = np.std([len(x) for x in x_train])\n",
+    "print(average_x_len)\n",
     "print(stddev_x_len)\n",
     "x_train = pad_sequences(x_train, maxlen=500, dtype='object') \n",
     "x_test = pad_sequences(x_test, maxlen=500, dtype='object')   \n",
     "\n",
     "padded_average_x_len = np.mean([len(x) for x in x_train])\n",
-    "padded_stddev_x_len = np.std(x_train)\n",
+    "padded_stddev_x_len = np.std([len(x) for x in x_train])\n",
     "\n",
-    "count_positive = count([x for x in x_train if x == 1])\n",
-    "count_negative = count([x for x in x_train if x == 0])\n",
+    "count_positive = np.sum(y_test)\n",
+    "count_negative = len(y_test) - count_positive\n",
     "\n",
     "print(\"Przed paddingiem. Średnia długość wektora: {ave_len}; odchylenie std: {std_dev}\".format(\n",
     "    ave_len=average_x_len, std_dev=stddev_x_len))\n",
@@ -118,9 +111,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 25000 samples, validate on 25000 samples\n",
+      "Epoch 1/5\n",
+      "25000/25000 [==============================] - 3s 115us/step - loss: 100.8645 - accuracy: 0.5018 - val_loss: 6.2761 - val_accuracy: 0.4991\n",
+      "Epoch 2/5\n",
+      "25000/25000 [==============================] - 3s 109us/step - loss: 2.7367 - accuracy: 0.5083 - val_loss: 1.8060 - val_accuracy: 0.4990\n",
+      "Epoch 3/5\n",
+      "25000/25000 [==============================] - 3s 103us/step - loss: 1.1243 - accuracy: 0.5046 - val_loss: 1.1981 - val_accuracy: 0.4995\n",
+      "Epoch 4/5\n",
+      "25000/25000 [==============================] - 3s 105us/step - loss: 0.8223 - accuracy: 0.5082 - val_loss: 1.0712 - val_accuracy: 0.4982\n",
+      "Epoch 5/5\n",
+      "25000/25000 [==============================] - 3s 110us/step - loss: 0.7326 - accuracy: 0.5117 - val_loss: 1.0253 - val_accuracy: 0.4972\n",
+      "25000/25000 [==============================] - 1s 25us/step\n",
+      "Trafność klasyfikacji to: 49.71599876880646%\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "np.random.seed(1337) # for reproducibility\n",
@@ -169,19 +189,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\tensorflow_core\\python\\framework\\indexed_slices.py:424: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
+      "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 25000 samples, validate on 25000 samples\n",
+      "Epoch 1/2\n",
+      "25000/25000 [==============================] - 8s 337us/step - loss: 0.5289 - accuracy: 0.6996 - val_loss: 0.2948 - val_accuracy: 0.8737\n",
+      "Epoch 2/2\n",
+      "25000/25000 [==============================] - 8s 321us/step - loss: 0.1787 - accuracy: 0.9341 - val_loss: 0.2905 - val_accuracy: 0.8790\n",
+      "25000/25000 [==============================] - 2s 95us/step\n",
+      "Trafność klasyfikacji to: 87.89600133895874%\n"
+     ]
+    }
+   ],
    "source": [
     "model = Sequential()\n",
-    "model.add(Embedding(500,32,input_lenght=1000))\n",
+    "model.add(Embedding(input_dim=10000,output_dim=32,input_length=500))\n",
     "model.add(Flatten())\n",
     "model.add(Dense(64,activation='relu'))\n",
     "model.add(Dense(1,activation='sigmoid'))\n",
     "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
     "model.fit(x_train, y_train, validation_data=(x_test, y_test), epochs=2, batch_size=128)\n",
     "loss, accuracy = model.evaluate(x_test, y_test)\n",
-    "print(\"Trafność klasyfikacji to: {acc}%\".format(acc=accuracy*100)) "
+    "print(\"Trafność klasyfikacji to: {acc}%\".format(acc=accuracy*100)) \n",
+    "'''\n",
+    "Trafność klasyfikacji to: 87.89600133895874%\n",
+    "Tak trafność wzrosła znacząco\n",
+    "'''"
    ]
   },
   {
@@ -207,24 +253,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\tensorflow_core\\python\\framework\\indexed_slices.py:424: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
+      "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 25000 samples, validate on 25000 samples\n",
+      "Epoch 1/2\n",
+      "25000/25000 [==============================] - 77s 3ms/step - loss: 0.5484 - accuracy: 0.7323 - val_loss: 0.4443 - val_accuracy: 0.8046\n",
+      "Epoch 2/2\n",
+      "25000/25000 [==============================] - 77s 3ms/step - loss: 0.3665 - accuracy: 0.8475 - val_loss: 0.3728 - val_accuracy: 0.8382\n",
+      "25000/25000 [==============================] - 34s 1ms/step\n",
+      "Trafność klasyfikacji to: 83.81999731063843%\n",
+      "Czas treningu: 155.61368370056152\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nGRU - accuracy wylicza niestety źle?\\nTrafność klasyfikacji to: 0.0%\\nCzas treningu: 163.786137342453\\n'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import time\n",
     "\n",
     "model = Sequential()\n",
-    "model.add(Embedding(500,32,input_lenght=1000))\n",
-    "#model.add(LSTM(32, dropout=0.2, recurrent_dropout=0.2))\n",
-    "model.add(GRU(32, dropout=0.2, recurrent_dropout=0.2))\n",
-    "model.add(Desne(1,activation='sigmoid'))\n",
+    "model.add(Embedding(input_dim=10000,output_dim=32,input_length=500))\n",
+    "model.add(LSTM(32, dropout=0.2, recurrent_dropout=0.2))\n",
+    "#model.add(GRU(32, dropout=0.2, recurrent_dropout=0.2))\n",
+    "model.add(Dense(1,activation='sigmoid'))\n",
     "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
     "start_time = time.time()\n",
     "model.fit(x_train, y_train, validation_data=(x_test, y_test), epochs=2, batch_size=128)\n",
     "end_time = time.time()\n",
     "loss, accuracy = model.evaluate(x_test, y_test)\n",
     "print(\"Trafność klasyfikacji to: {acc}%\".format(acc=accuracy*100)) \n",
-    "print(\"Czas treningu: {t}\".format(t=end_time - start_time))"
+    "print(\"Czas treningu: {t}\".format(t=end_time - start_time))\n",
+    "'''\n",
+    "GRU - accuracy wylicza niestety źle? wnioskuje po loss: nan \n",
+    "Trafność klasyfikacji to: 0.0%\n",
+    "Czas treningu: 163.786137342453\n",
+    "LSTM\n",
+    "Trafność klasyfikacji to: 83.81999731063843%\n",
+    "Czas treningu: 155.61368370056152\n",
+    "\n",
+    "Czasy porównywalne, accuracy niestety nie moge ocenić,\n",
+    "ze względu na to, że jest wyliczane źle z jakiegoś powodu.\n",
+    "'''"
    ]
   },
   {
@@ -257,22 +347,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\tensorflow_core\\python\\framework\\indexed_slices.py:424: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
+      "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 25000 samples, validate on 25000 samples\n",
+      "Epoch 1/2\n",
+      "25000/25000 [==============================] - 21s 831us/step - loss: 0.5376 - accuracy: 0.6843 - val_loss: 0.2851 - val_accuracy: 0.8820\n",
+      "Epoch 2/2\n",
+      "25000/25000 [==============================] - 20s 818us/step - loss: 0.2172 - accuracy: 0.9160 - val_loss: 0.2777 - val_accuracy: 0.8854\n",
+      "25000/25000 [==============================] - 5s 220us/step\n",
+      "Trafność klasyfikacji to: 88.54399919509888%\n"
+     ]
+    }
+   ],
    "source": [
     "model = Sequential()\n",
-    "model.add(Embedding(500,32,input_lenght=1000))\n",
+    "model.add(Embedding(input_dim=10000,output_dim=32,input_length=500))\n",
     "model.add(Conv1D(32, kernel_size=3, padding='same', activation='relu'))\n",
     "model.add(MaxPooling1D(pool_size=2))\n",
     "model.add(Flatten())\n",
-    "model.add(Dense(250, activatio='relu'))\n",
+    "model.add(Dense(250, activation='relu'))\n",
     "model.add(Dense(1, activation='sigmoid'))\n",
     "\n",
     "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
     "model.fit(x_train, y_train, validation_data=(x_test, y_test), epochs=2, batch_size=128)\n",
     "loss, accuracy = model.evaluate(x_test, y_test)\n",
-    "print(\"Trafność klasyfikacji to: {acc}%\".format(acc=accuracy*100)) "
+    "print(\"Trafność klasyfikacji to: {acc}%\".format(acc=accuracy*100)) \n",
+    "'''\n",
+    "Uzyskaliśmy lepszy wynik,\n",
+    "niż w sieci wykorzystującej embedding\n",
+    "Trafność klasyfikacji to: 88.54399919509888%\n",
+    "'''"
    ]
   },
   {
@@ -301,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
